2011-10-13  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/titlepag.tex:  Revise the sections that 
	describe function plots to mention `set samples`.  Allow the table of
	builtin functions to split across pagebreaks in the TeX documentation.

2011-10-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c: Bump default QUADTREE_GRANULARITY from 10 to 30.
	At 10, 24% of the CPU time for all.dem is spent in hidden line removal.
	At 30 this decreases to 12%, for roughly a 10% speed increase overall.

2011-10-10  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/datafile.c src/datafile.h src/gadgets.h src/graphics.c
	src/graphics.h src/plot2d.c src/save.c src/set.c src/show.c
	demo/boxplot.dem docs/gnuplot.doc:

	Add new mode for the "with boxplot" plot style.
	If there is a 4th column in the using spec, the values in it it will
	be interpreted as the discrete levels of a factor variable. As many
	boxplots will be drawn as there are different values in the factor
	column, each boxplot representing part of the dataset. These boxplots
	are optionally labeled and sorted. New options "separation", "label",
	and "sorted"/"unsorted" to "set style boxplot" govern the behavior of
	this new mode. The demo "boxplot.dem" is extended to showcase the new
	capability. 

2011-10-09  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/internal.c (f_sprintf): More complete MSVC++ snprintf() patch.

2011-10-09  Adam Strzelecki  <ono@users.sourceforge.net>

	* src/wxterminal/wxt_gui.h src/wxterminal/wxt_gui.cpp:
	Work around a number of issues compiling and running wxt with wx 2.9
	using 64-bit Cocoa on OSX Lion. All changes are #ifdef __WXOSX_COCOA__.
	These may not be necessary once Cocoa reaches a stable release. 
	(1) use wxToolbar AddStretchableSpace rather than AddSeparator 
	(2) wx Cocoa does not support logical operators such as wxDC inverse
	(3) wx Cocoa toolbar icons are blurry unless they are 24x24