@@ -4,6 +4,10 @@
 	describe function plots to mention `set samples`.  Allow the table of
 	builtin functions to split across pagebreaks in the TeX documentation.
 
+	* src/wxterminal/gp_cairo.c: Decrease linewidth used by pdfcairo
+	terminal for pattern fill.  This works around what seems to be a pdf
+	bug in libcairo versions through at least 1.10.
+
 2011-10-10  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/hidden3d.c: Bump default QUADTREE_GRANULARITY from 10 to 30.
